# swift_file

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: cli.rs  config.rs  files.rs  main.rs  network.rs  qr.rs  receive.rs  send.rs  server.rs
src/resources/: form.html
