[package]
author = "Mateo Radman"
name = "swift_file"
version = "0.1.0"
edition = "2021"
about = "Send or receive files "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15", features = ["multipart"] }
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
local-ip-address = "0.5.1"
qrcode = "0.12.0"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["limit", "trace"] }
