[package]
author = "Mateo Radman"
name = "swift_file"
version = "0.1.0"
edition = "2021"
about = "Send or receive files between devices using Wi-Fi network"

[[bin]]
name = "sf"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.15", features = ["multipart"] }
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
local-ip-address = "0.5.1"
mime = "0.3.17"
new_mime_guess = "4.0.1"
qrcode = "0.12.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
uuid = { version = "1.3.1", features = ["v4"] }
