[package]
authors = ["Mateo Radman <radmanmateo@gmail.com>"]
name = "swift_file"
version = "0.1.5"
edition = "2021"
description = "Send or receive files between devices using Wi-Fi network"
license = "MIT"
documentation = "https://github.com/mateoradman/swift_file"
homepage = "https://github.com/mateoradman/swift_file"
repository = "https://github.com/mateoradman/swift_file"
keywords = ["cli", "file-transfer", "axum", "api"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
bench = false
name = "sf"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.15", features = ["multipart"] }
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
humansize = "2.1.3"
mime = "0.3.17"
new_mime_guess = "4.0.1"
opener = "0.6.1"
qrcode = "0.12.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
uuid = { version = "1.3.1", features = ["v4"] }
